change the user to member with only email to login

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -2,4 +2,49 @@
 
 {% block content %}
 <h1>About</h1>
+
+<div class="days">
+  <h1>Hello! We are the TeensConnect.</h1>
+
+  <p> About the Team: </p>
+
+  <p>Ruyee Teens Connect is the youth council of the Ruyee Chinese School, providing opportunities for teenagers
+    to
+    cultivate their desire to serve the society and to build their leadership skills by developing and
+    participating in various activities.</p>
+
+  <p>Teens Connect recruits members from nearby neighborhoods and organizes activities, contests, and workshops,
+    such as art works appreciation, cultural learning, knowledge sharing, kids tutoring, websites design and
+    development, fundraising, etc.</p>
+
+  <p>TeensConnect also serves as a nonprofit volunteer service to help communities near San Jose. The team creates
+    opportunities for people in need. Begun in late October, we have continuously helped people with SN by adding
+    a variety of life changes. Moreover, the Team has accomplished raising approximately 300$ dollars for the
+    organization to buy much needed supplies such as microwaves and refrigerators.</p>
+
+
+  <h1>Ruyee Teens Connect</h1>
+      <p>
+        是如一中文学校发起创办的学生公益组织，目的是为有兴趣做公益的孩子们搭建一个平台，指导、帮助孩子们自己开展一些有意义的活动。希望孩子们能在做具体活动的过程中既能得到锻练和成长，又能使她们的专业技能和才艺在帮助他人和社区的活动中发挥价值，并且能在发现问题、思考问题、解决问题的经历中不断形成自己对社会的认知和思考。
+      </p>
+      <p>计划开展的活动包括但不限于：</p>
+      
+        <p> 1.石头画比赛，义卖</p>
+        <p> 2.绘画创作社区交流沙龙，义卖</p>
+        <p> 3.艺术展示Box推广：Box制作， 小艺术作品展示，分享，义卖</p>
+        <p> 4.摄影比赛，展览</p>
+        <p> 5.如一“图书馆”项目</p>
+        <p> 6.如一网站功能拓展编程优化项目 </p>
+      
+          <p>This website was designed by the Computer Science Group.</p>
+
+          
+
+          
+</div>
+
+<!-- <a href="event1.html"><li><span class="active">x</span></li></a> 
+-->
+</div>
+
 {% endblock %}
