--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TeensConnect</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
     {% include 'navbar.html' %}
-    <div class="container">
+    <div id='ctn' class="container">
         {% if messages %}
           {% for message in messages %}
           <div class="alert alert-primary" role="alert">
