--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -66,7 +66,7 @@
               </li>
             {% else %}
             <li class="dropdown-item">
-              <a class="nav-link" href="{% url 'register_user' %}">Register</a>
+              <a class="nav-link" href="{% url 'register_member' %}">Register</a>
             </li>
             <li class="dropdown-item">
               <a class="nav-link" href="{% url 'login' %}">Login</a>
