--- a/main/templates/events.html
+++ b/main/templates/events.html
@@ -6,7 +6,7 @@
 {% for event in events %}
 <div class="shadow p-4 mb-5 bg-body rounded">
   <div class="card">
-  <div class="card-header">
+  <div class="card-header" style="display:none">
     Featured
   </div>
   <div class="card-body">
