--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -16,13 +16,19 @@
               Events
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="{% url 'list_events' %}">List events</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="{% url 'add_event' %}">Add Event</a></li>
+              <li style="display:none"><a class="dropdown-item" href="{% url 'list_events' %}">List events</a></li>
+              <li style="display:none"><hr class="dropdown-divider"></li>
+              <li style="display:none"><a class="dropdown-item" href="{% url 'add_event' %}">Add Event</a></li>
+              <li><a class="dropdown-item" href="{% url 'list_calendar' %}">List events</a></li>
+              <li><a class="dropdown-item" href="https://calendar.google.com/">Calendar</a></li>
+              {% if user.is_authenticated %}
+              <li style="display:none"><hr class="dropdown-divider"></li>
+              <li style="display:none"><a class="dropdown-item" href="{% url 'add_calendar' %}">Add Event</a></li>
+              {% endif %}
             </ul>
           </li>
           {% if user.is_authenticated %}
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown" style="display:none">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Locations
             </a>
