--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-    background: radial-gradient(rgb(212, 76, 189), rgb(168, 158, 134), rgb(87, 145, 216)) repeat left top;
+    background-image: url("images/background1.jpeg");
 }
 h1 {
     color:Blue;
