--- a/main/templates/team_cs.html
+++ b/main/templates/team_cs.html
@@ -3,6 +3,35 @@
 
 {% block content %}
 <h1>CS Group</h1>
-
+<div class="row">
+    <div class="col-sm-8">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              {% for photo in photos %}
+                {% if photo == active %}
+                <div class="carousel-item active" data-bs-interval="10000">
+                {% else %}
+                <div class="carousel-item" data-bs-interval="10000">
+                {% endif %}
+                    <a href="{{ photo.get_original_watermark_url }}"><img src="{{ photo.get_disp_400_200_url }}" class="center-block w-100 h-50 rounded-pill" style="width:200px" alt="image"></a>
+                </div>
+              {% endfor %}
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 2</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+</div>
 
 {% endblock %}
