--- a/main/templates/team_tutor.html
+++ b/main/templates/team_tutor.html
@@ -2,7 +2,63 @@
 {% load static %}
 
 {% block content %}
-<h1>Tutoring Group</h1>
+<h1>After School Tutor Team</h1>
+<p>Welcome to the After School Tutor Team page! We help tutor children at Ruyee with schoolwork, organize fun events, and encourage learning.</p>
+<div class="row p-2">
+    <div class="col card-sm bg-white shadow p-3 m-2 rounded">
+        <img src="static/images/zixuan.jpg" class="rounded-start mx-auto" style="width:300px" alt="Zixuan">
+        <div class="card-body mt-3">
+            <h5 class="card-title">Zixuan</h5>
+            <i class="text-muted">President</i>
+            <p><b>"I love working with kids and help those who are struggling with work."</b></p>
+            <pclass="text-muted">yinzixuansz@gmail.com</p>
+        </div>
+    </div>
+    <div class="col card-sm bg-white shadow p-3 m-2 rounded">
+        <img src="static/images/teens.jpeg" class="rounded-start mx-auto" style="width:300px" alt="Zixuan">
+        <div class="card-body mt-3">
+            <h5 class="card-title">Isabella Zhu</h5>
+            <i class="text-muted">President</i>
+            <p><b>"VP of AST Team"</b></p>
+            <pclass="text-muted">isabellazhu6@gmail.com</p>
+        </div>
+    </div>
+    <div class="col card-sm bg-white shadow p-3 m-2 rounded">
+        <img src="static/images/lucas.jpg" class="rounded-start mx-auto" style="width:300px" alt="Zixuan">
+        <div class="card-body mt-3">
+            <h5 class="card-title">Lucas Wang</h5>
+            <i class="text-muted">Member</i>
+            <p><b>"I'm willing to help with homework and play games with kids. You can find me on Wednesdays and occasionally other days."</b></p>
+            <pclass="text-muted">tamatoey@gmail.com</p>
+        </div>
+    </div>
+    <div class="col card-sm bg-white shadow p-3 m-2 rounded">
+        <img src="static/images/vivian.jpg" class="rounded-start mx-auto" style="width:300px" alt="Zixuan">
+        <div class="card-body mt-3">
+            <h5 class="card-title">Vivian Zheng</h5>
+            <i class="text-muted">Member</i>
+            <p><b>"Member of AST Team"</b></p>
+            <pclass="text-muted">vzheng30@gmail.com</p>
+        </div>
+    </div>
+    <div class="col card-sm bg-white shadow p-3 m-2 rounded">
+        <img src="static/images/cindy.jpg" class="rounded-start mx-auto" style="width:300px" alt="Zixuan">
+        <div class="card-body mt-3">
+            <h5 class="card-title">Cindy Liu</h5>
+            <i class="text-muted">Member</i>
+            <p><b>"Member of AST Team"</b></p>
+            <pclass="text-muted">cindytliu07@gmail.com</p>
+        </div>
+    </div>
+    <div class="col card-sm bg-white shadow p-3 m-2 rounded">
+        <img src="static/images/teens.jpeg" class="rounded-start mx-auto" style="width:300px" alt="Zixuan">
+        <div class="card-body mt-3">
+            <h5 class="card-title">David</h5>
+            <i class="text-muted">Member</i>
+            <p><b>"Member of AST Team"</b></p>
+            <pclass="text-muted">davidope.xuan@gmail.com</p>
+        </div>
+    </div>
 
-
+</div>
 {% endblock %}
