--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1>Homepage</h1>
-<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       {% for photo in photos %}
         {% if photo == active %}
@@ -11,7 +11,7 @@
         {% else %}
         <div class="carousel-item" data-bs-interval="10000">
         {% endif %}
-            <a href="{{ photo.get_original_watermark_url }}"><img src="{{ photo.get_disp_400_200_url }}" class="center-block w-100 h-50" alt="image"></a>
+            <a href="{{ photo.get_original_watermark_url }}"><img src="{{ photo.get_disp_400_200_url }}" class="center-block w-100 h-50 rounded" alt="image"></a>
         </div>
       {% endfor %}
     </div>
@@ -55,5 +55,8 @@
   </div></div>
   {% endfor %}
   {% endif %}
+  <div class="shadow p-4 mb-5 bg-body rounded">
+    <iframe src="https://calendar.google.com/calendar/embed?src=c0ok56ph3tf92f6t01fkqrh7pc%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  </div>
 
 {% endblock %}
