Fixed the typo totor with Tutor

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -56,7 +56,8 @@
   {% endfor %}
   {% endif %}
   <div class="shadow p-4 mb-5 bg-body rounded">
-    <iframe src="https://calendar.google.com/calendar/embed?src=c0ok56ph3tf92f6t01fkqrh7pc%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?src=c0ok56ph3tf92f6t01fkqrh7pc%40group.calendar.google.com&ctz=America%2FLos_Angeles" \
+        style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
   </div>
 
 {% endblock %}
